Remove custom file extensions

--- a/EmulatorJS.html
+++ b/EmulatorJS.html
@@ -118,8 +118,7 @@
     </div>
 
     <div id="box">
-        <input id="input" type="file"
-            accept=".iso,.cso,.pbp,.bin,.rom,.nes,.sfc,.smc,.gb,.gbc,.gba,.nds,.n64,.z64,.md,.smd,.gen,.gg,.sms,.zip">
+        <input id="input" type="file">
         Drag ROM file or Click Here
     </div>
 
